src/objects/CORE_NT_Summary_Task__c.object
<CustomObject>
    <description>Core – Network Tracking - This object is used to capture Summary Tasks information in Network.</description>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_Id__c</fullName>
        <label>MPP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_ExtID__c</fullName>
        <externalId>true</externalId>
        <label>Milestone_ExtID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Outline_Number__c</fullName>
        <label>Outline Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
        <label>Parent Summary Task</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CORE_NT_Summary_Task__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>CORE_NT_Summary_Task__c.Parent_Milestone__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Parent Milestones must be part of the same project as the child milestone. Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CORE_NT_Summary_Task__c</referenceTo>
        <relationshipLabel>Summary Tasks (Parent Summary Task)</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Import_Id__c</fullName>
        <label>Predecessor_Milestone_Import_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
        <label>Predecessor Summary Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CORE_NT_Summary_Task__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CORE_NT_Summary_Task__c</referenceTo>
        <relationshipLabel>Summary Tasks (Predecessor Summary Task)</relationshipLabel>
        <relationshipName>Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>CORE_NT_Project__c</referenceTo>
        <relationshipLabel>Summary Tasks</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Spent__c</fullName>
        <label>Total Expense Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_FTE_Budget__c</fullName>
        <label>Total FTE Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FTE_Spent__c</fullName>
        <label>Total FTE Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isParentSummaryTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ParentSummaryTask?</label>
        <type>Checkbox</type>
    </fields>
    <label>Summary Task</label>
    <nameField>
        <label>Summary Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>